Minor: Issue #72 - Fix scrollbar search highlighter/marker position
This resolves #72.

I apparently had a compatibility fix for this extension (before being forked) already. However, I added an unnecessary direction check that made it useless unless you're using an extension that messes with the browser element's `dir` attribute (e.g. TabKit).

--- a/src/skin/aios_layout.css
+++ b/src/skin/aios_layout.css
@@ -132,7 +132,7 @@ window[aiosOrient="right"] #browser[dir="reverse"] #sidebar-splitter {
  */
 
 /* Scrollbar Search Highlighter */
-#browser[dir="normal"] #highlight-grid {
+#browser #highlight-grid {
   -moz-box-ordinal-group: 51;
 }
 #browser[dir="reverse"] #highlight-grid {
